Bugfix for overflow on long filenames with no spaces (#1349)
* Fixed Bug #403

. Fixed: Added word wrapping for long filenames with no spaces on headers that would cause info modal to overflow.

* Fixed Bug #403

. Fixed: Added word breaking for long filenames with no spaces which would cause volume info modal to overflow.

* Fixed Bug #403

Fixed: Added word breaking for long filenames with no spaces on headers, titles, and lists which would cause overflow.
Affected: Series Detail header, Edit Series modal title, and Volumes Info modal (View Files) modal.

* Removing some inline styles, moving style from global to component level

* whoops, forgot to remove inline

* Added word breaking and removed inline styles for headers

. Fixed: Card Detail, List Item

--- a/UI/Web/src/app/cards/card-detail-layout/card-detail-layout.component.scss
+++ b/UI/Web/src/app/cards/card-detail-layout/card-detail-layout.component.scss
@@ -86,3 +86,8 @@
   //background-color: red;
   //max-height: calc(var(--vh)*100 - 170px);
 }
+
+h2 {
+    display: inline-block;
+    word-break: break-all;
+}
