--- a/UI/Web/src/app/sidenav/side-nav-companion-bar/side-nav-companion-bar.component.scss
+++ b/UI/Web/src/app/sidenav/side-nav-companion-bar/side-nav-companion-bar.component.scss
@@ -1,9 +1,3 @@
 .hide-if-empty:empty {
     display: none !important;
 }
-
-::ng-deep .companion-bar {
-    h1, h2, h3, h4, h5, h6 {
-        margin-bottom: 0px;
-    }
-}
